discord-bot/src/test/resources/cocos/guild/invalid/BlackListIsUnique.gld
configuration 12345L {
    prefix "prefix"
    blacklist "expression"
    blacklist "expression"
    subreddit "x" {
        channel : 0L
    }
    selfassignable "c" {
        role : 9L
    }
}
